feature: remove the topic and topic version implementation - didn't like it
