# javalin-api/src/main/kotlin/za/co/no9/mes/adaptors/api/javalin/API.kt
@@ -4,10 +4,8 @@ import com.google.gson.Gson
 import io.javalin.Javalin
 import org.apache.commons.io.IOUtils
 import za.co.no9.mes.adaptors.api.javalin.beans.NewEvent
-import za.co.no9.mes.adaptors.api.javalin.beans.NewTopic
 import za.co.no9.mes.domain.Event
 import za.co.no9.mes.domain.Services
-import za.co.no9.mes.domain.Topic
 import java.util.*
 
 
@@ -27,23 +25,6 @@ class API(private val services: Services) {
 
     internal fun getEvent(id: Int): za.co.no9.mes.adaptors.api.javalin.beans.Event? =
             services.event(id)?.from()
-
-
-    fun saveTopic(newTopic: NewTopic): za.co.no9.mes.adaptors.api.javalin.beans.Topic =
-            services
-                    .saveTopic(newTopic.name)
-                    .from()
-
-
-    internal fun getTopic(id: Int): za.co.no9.mes.adaptors.api.javalin.beans.Topic? =
-            services.topic(id)?.from()
-
-
-    internal fun getTopics(start: Int?, pageSize: Int): List<za.co.no9.mes.adaptors.api.javalin.beans.Topic> =
-            services
-                    .topics(start, pageSize)
-                    .map { it.from() }
-                    .toList()
 }
 
 
@@ -99,50 +80,6 @@ fun Javalin.registerAPIEndpoints(services: Services): Javalin {
     }
 
 
-    this.get("/api/topics/:id") { ctx ->
-        val topic =
-                api.getTopic(Integer.parseInt(ctx.pathParam("id")))
-
-        if (topic == null) {
-            ctx.status(412)
-        } else {
-            ctx.header("Content-Type", "application/json")
-            ctx.header("Expires", calculateExpires().toGMTString())
-            ctx.result(gson.toJson(topic))
-        }
-    }
-
-
-    this.get("/api/topics") { ctx ->
-        val start =
-                ctx.queryParam("from")?.toInt()
-
-        val pageSize =
-                ctx.queryParam("pagesize", "100")?.toInt() ?: 100
-
-        val topics =
-                api.getTopics(start, pageSize)
-
-        ctx.header("Content-Type", "application/json")
-        if (topics.size == pageSize) {
-            ctx.header("Expires", calculateExpires().toGMTString())
-        }
-        ctx.result(gson.toJson(topics))
-    }
-
-
-    this.post("/api/topics") { ctx ->
-        val newTopicBean =
-                gson.fromJson(ctx.body(), NewTopic::class.java)
-
-        val topic =
-                api.saveTopic(newTopicBean)
-
-        ctx.header("Content-Type", "application/json")
-        ctx.result(gson.toJson(topic))
-    }
-
-
     this.get("/api") { ctx ->
         API::class.java.getResourceAsStream("/swagger.yaml").use { resourceAsStream ->
             ctx.result(IOUtils.toString(resourceAsStream))
@@ -165,8 +102,3 @@ private fun calculateExpires(): Date {
 
 private fun Event.from(): za.co.no9.mes.adaptors.api.javalin.beans.Event =
         za.co.no9.mes.adaptors.api.javalin.beans.Event(id, `when`, name, content)
-
-
-private fun Topic.from(): za.co.no9.mes.adaptors.api.javalin.beans.Topic =
-        za.co.no9.mes.adaptors.api.javalin.beans.Topic(id, name)
-
